used dictionary to store multiple BigGAN model paths to improve code readability

--- a/Experiment_2_Generative_Models_Beta_Testing.ipynb
+++ b/Experiment_2_Generative_Models_Beta_Testing.ipynb
@@ -184,14 +184,17 @@
       "execution_count": null,
       "source": [
         "# BigGAN-deep models\n",
-        "# module_path = 'https://tfhub.dev/deepmind/biggan-deep-128/1'  # 128x128 BigGAN-deep\n",
-        "module_path = 'https://tfhub.dev/deepmind/biggan-deep-256/1'  # 256x256 BigGAN-deep\n",
-        "# module_path = 'https://tfhub.dev/deepmind/biggan-deep-512/1'  # 512x512 BigGAN-deep\n",
+        "modules = {\n",
+        "    # BigGAN-deep models\n",
+        "    \"biggan-deep-128\": \"https://tfhub.dev/deepmind/biggan-deep-128/1\", # 128x128 BigGAN-deep\n",
+        "    \"biggan-deep-256\": \"https://tfhub.dev/deepmind/biggan-deep-256/1\", # 256x256 BigGAN-deep\n",
+        "    \"biggan-deep-512\": \"https://tfhub.dev/deepmind/biggan-deep-512/1\", # 512x512 BigGAN-deep\n",
         "\n",
-        "# BigGAN (original) models\n",
-        "# module_path = 'https://tfhub.dev/deepmind/biggan-128/2'  # 128x128 BigGAN\n",
-        "# module_path = 'https://tfhub.dev/deepmind/biggan-256/2'  # 256x256 BigGAN\n",
-        "# module_path = 'https://tfhub.dev/deepmind/biggan-512/2'  # 512x512 BigGAN\n"
+        "    # BigGAN (original) models\n",
+        "    \"biggan-128\": \"https://tfhub.dev/deepmind/biggan-128/2\", # 128x128 BigGAN\n",
+        "    \"biggan-256\": \"https://tfhub.dev/deepmind/biggan-256/2\", # 256x256 BigGAN\n",
+        "    \"biggan-512\": \"https://tfhub.dev/deepmind/biggan-512/2\"  # 512x512 BigGAN\n",
+        "}"
       ],
       "outputs": [],
       "metadata": {
@@ -213,6 +216,7 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
+        "module_path = modules[\"biggan-deep-256\"]\n",
         "print('Loading BigGAN module from:', module_path)\n",
         "module = hub.Module(module_path)"
       ],
